Generate custom runtime image