@@ -53,6 +53,9 @@ public /*static*/ class Sequencer {
       // javadoc
       if (realm.flags().contains(Project.Realm.Flag.CREATE_API_DOCUMENTATION))
         tasks.add(newJavadocTask(realm));
+      // jlink
+      if (realm.flags().contains(Project.Realm.Flag.CREATE_CUSTOM_RUNTIME_IMAGE))
+        tasks.add(newJlinkTask(realm));
     }
     return Task.sequence("Build Sequence", tasks);
   }
@@ -98,6 +101,32 @@ public /*static*/ class Sequencer {
         "Generate API documentation for " + realm.toLabelName() + " realm",
         ToolProvider.findFirst("javadoc").orElseThrow(),
         arguments.toStringArray());
+  }
+
+  Task newJlinkTask(Project.Realm realm) {
+    var base = project.base();
+    var modulePaths = new ArrayList<Path>();
+    modulePaths.add(base.modules(realm.name()));
+    modulePaths.addAll(Helper.modulePaths(project, realm));
+    var units = realm.units();
+    var mainModule = Modules.findMainModule(units.values().stream().map(Project.Unit::descriptor));
+    var arguments =
+        new Arguments()
+            .put("--add-modules", String.join(",", units.keySet()))
+            .put("--module-path", modulePaths)
+            .put("--output", base.image());
+    if (mainModule.isPresent()) {
+      var module = mainModule.get();
+      var launcher = Path.of(module.replace('.', '/')).getFileName().toString();
+      arguments.put("--launcher", launcher + '=' + module);
+    }
+    tuner.tune(arguments, Map.of("tool", "jlink", "realm", realm.name()));
+
+    return Task.sequence(
+        "Create custom runtime image",
+        new Task.DeleteDirectories(base.image()),
+        new Task.RunTool(
+            "jlink", ToolProvider.findFirst("jlink").orElseThrow(), arguments.toStringArray()));
   }
 
   /** A mutable argument collection builder. */
